@@ -10,6 +10,7 @@
 * Fixing #185 audio channels not being set properly and resetting on encoder change (thanks to Tupsi)
 * Fixing #522 add file fails - fixed as of 5.7.0 (thanks to pcl5x2008)
 * Fixing #531 list limitation in readme that FFmpeg must support the software encoders listed (thanks to brunoais)
+* Fixing #585 error when trying to return a video from queue that has the video track after audio or subtitiles (thanks to Hankuu)
 * Fixing #586 audio channels being set incorrectly (thanks to Hankuu)
 * Fixing #588 audio and subtitle dispositions were not set from source (thanks to GeZorTenPlotZ)
 
